Added generics to all implementations